# OpenStratos-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  cross32  cross64  prepare-script.sh
src/: gsm.rs  logger.rs  main.rs  threads.rs  utils.rs
src/logic/: mod.rs
